...
    } else if (showPrivacyPolicy) {
        return <PrivacyPolicy showClose onClose={() => setShowPrivacyPolicy(false)} />;
    } else
        return (
            <SafeAreaProvider>
                <SafeAreaView
                    testID="legal-modal"
                    forceInset={{ bottom: 'never' }}
                    style={props.styles.container}
                >
                    {props.showClose && (
                        <TouchableOpacity
                            onPress={() => props.onClose && props.onClose()}
...
                            />
                        </TouchableOpacity>

                        <View style={props.styles.divider} />

                        <Button
                            testID="legal-accept-button"
                            wrapperStyle={props.styles.bottomButton}
                            primary
                            onPress={() => {
                                props.appSetAcceptedTcVersion(props.tcLatestVersion);
                                props.onAccept();
                            }}
...
